--- a/SamsungFieldTestClient/app/src/main/AndroidManifest.xml
+++ b/SamsungFieldTestClient/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru0xdc.ssp.client" >
+    package="ru0xdc.sfts.client" >
 
-    <uses-permission android:name="ru0xdc.sfts.app.SERVICE_MODE"/>
+    <uses-permission android:name="ru0xdc.sfts.service.SERVICE_MODE"/>
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="ru0xdc.ssp.client.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
